	  Max Holtzberg (2013-10-17).
	* net/uip/uip_tcpinput.c:  Move tcp connection into SYN_RCVD state
	  after aception instead of bypassing and moving directly into ESTABLISHED.
	  From Max Holtzberg (2013-10-17).
	* net/net_sendfile.c:  Let the ACK callback handle the REXMIT flag and
	  don't return until all data has been ACK'd. From Max Holtzberg
	  (2013-10-17).
	* arch/arm/src/stm32/chip/stm32f40xxx_dma.h: Typo fixes for UART7 and
	  UART8 DMA configs.  From Mike Smit (2013-10-18).
	* arch/arm/src/stm32/Kconfig:  DMA priority corrections from Mike Smith
	  (2013-10-18).
	* arch/arm/src/stm32/stm32*_dma.c, stm32_sdio.c, and stm32_dma.h:
	  Changes to the stm32_dmacapable API. In order to correctly verify that
	  a buffer can be transferred, the transfer count and the CCR value are
	  required.  Implemented stm32_dmacapable for stm32f1xx devices. Enhanced
	  stm32_dmacapable for stm32f2xx and stm32f4xx devices to check for
	  additional conditions that will cause DMA to fail or lose data (2013-10-18).
	* include/nuttx/sdio.h:  Add a preflight method to the SDIO interface.
	  From Mike Smith (2013-10-18).
	* drivers/mmcsd/mmscd_sdio.c: Enhanced the mmcdd_sdio driver to perform
	  DMA preflight operations and fail DMA read/write requests that fail
	  preflighting. From Mike Smith (2013-10-18).
	* fs/fat/fs_fat32.c: Enhanced the FAT32 filesystem code to understand DMA
	  preflight failures, and to use the file sector buffer as a bounce buffer
	  when a user-supplied buffer is not suitable for DMA. From Mike Smith
	  (2013-10-18).
	* arch/arm/src/sama5/chip/sam_rtc.h and sam_wdt.h:  Add WDT and RTC
	  register definition header files (2013-10-18).
	* arch/arm/src/sama5/chip/sam_rtc.c and sam_rtc.h:  Basic RTC driver.
	  Support for RTC alarms is fragmentary and this has not yet been hooked
	  into the build system  (2013-10-18).
	* Various Spark and CC3000 files:  Update by David Sidrane (2013-10-18).
