@@ -5816,4 +5816,6 @@
 	  Support for RTC alarms is fragmentary and this has not yet been hooked
 	  into the build system  (2013-10-18).
 	* Various Spark and CC3000 files:  Update by David Sidrane (2013-10-18).
+	* arch/arm/src/sama5/chip/sam_gpbr.h:  Add SAMA5 GPBR register
+	  definitions (2013-10-19).
 
